--- a/TODO2108.md
+++ b/TODO2108.md
@@ -9,6 +9,18 @@
 
 ## ✅ ADDITIONAL FIXES COMPLETED (Round 2 - August 21, 2025):
 
+### ⚠️ TIDLIGERE FEIL SOM MÅ VERIFISERES OG FIKSES:
+- [x] 1. /price-alerts/create - "Kunne ikke opprette prisvarsel" (Fixed: Enhanced error handling)
+- [x] 2. TradingView charts laster ikke på /stocks/details/TSLA og andre tickers (Fixed: Better initialization)
+- [x] 3. Knapper fungerer ikke på stock details (Favoritt, Portefølje, Kjøp) (Fixed: Added portfolio button + enhanced UX)
+- [x] 4. Teknisk analyse tabber helt tomme (RSI, MACD) (Fixed: Enhanced indicators with dynamic loading)
+- [ ] 5. /pro-tools/screener - "Method not allowed"
+- [ ] 6. /notifications - "Error loading notifications" 
+- [ ] 7. /stocks/compare - ingen visualisering, tom hvit seksjon
+- [ ] 8. Kan ikke slette porteføljer (/portfolio/)
+- [ ] 9. Kan ikke slette watchlists (/portfolio/watchlist)
+- [ ] 10. /advanced/crypto-dashboard - rotete layout
+
 ### TradingView Charts Fixed:
 - Improved chart initialization timing with proper TradingView library loading detection
 - Added fallback message system for when charts don't load
