--- a/TODO2108.md
+++ b/TODO2108.md
@@ -1,25 +1,104 @@
 # KRITISKE FEIL - FULLSTENDIG LISTE 
-- [x] Fix Resources navigation dropdown - remove the --> comment that's hiding the entire dropdown
-- [x] Add forum link to the Resources dropdown
-- [x] Fix PC navigation positioning - move more to the left to prevent KONTO submenu from going off-screen
-- [x] Add missing colors to resources page sections/banners 
-- [x] Change blue premium banner on front page to dark green or black
-- [x] Fix sentiment analysis technical error for AFG.OL and other symbols
-- [x] Verify and test all fixes
+Når det gjelder styling endringer...Kan du scratche alle stylingendringer gjort det siste døgnet? Også dereter prøver vi igjen å fikse det lille jeg ville fikse vedr.s tyling,og det var egnetling stort sett bare å endre noen overskrifter/tekster fra sort til hvit, og omvendt... De som var på farget bakgrunn og  var sorte av tekst,ville jegn ha lyse, og noen fåpn steder var det hvit tekst på lysblå bakgrunn,
+Det er f.eks sort tekst o underoverskriftene på min profil, det står Profil, og Varsler i sort tekstfarge,på mørkblå bakgrunn. Da må tekstfargen IKKE være sort men hvit.. Nesten ALLE steder er det småoverskrifrer i SORT, påfarget bakgrunn (mye mørkblå bakgrunn) ,og det skulle det vært HVIT tekstfarge...=(
+  Dert er ogå en del knapper som har vært sorte,og plutselig nå er brune...
+  KAN DU pls resette alt med styling kontrastfixes, siste typ 30 timene
+  -
 
-## ✅ ADDITIONAL FIXES COMPLETED (Round 2 - August 21, 2025):
+---
+Alt som er lilla,endre farge på det xD
+Lysegult må endres til mørkegult,alle steder det er bakgrunnsfarge,og samme gjelder lysegrønt, eller lyserødt, må endres til mørkrødt, mørkgrønt, altså der dette er bakgrunnsfarge.
+-
+Banneret på forside som innlogget bruker, Premium markedsoversikt, some r blått og grønt: Finnbedre farger her.... feks sort og hvit, eller rød og hvit.. F.eks såder dette fortsatt feil på /prices..Her har det skjedd mye rart med fargene siste 24 t.
+-
+På profilen min når jeg slår på varsler for f.eks e-post,og det ser ut som det er går i orden, fvarselinnstilling oppdatert får jeg, MEN Det oppdateres ikke,altså togglen endres ikker, tror ikke jeg noensinne kommer til å få epost fvarsel heller, dette må fgikses på ordentlig.
+-
+Ressuerser ligger nå i hovednavigasjonenm,det er FEIL, skal kun ligge i footer
+-
+Søk aksjer feltet i footer, er veldig trangt ( på mobil) dette må fikses, mer space overf/under, flytt det lenger ned om det er mer hensiktsmessig.
+-
+ROI kalkulator siden, der ser det ut som det mangler ikoner i det øverste banneret (lilla nå men det ønskervi IKKE;bytut lilla med f.eks mørkgrønn...  )Altså banneret der det står Sanntiddata, AI analyse, Screening; Optimalisering, for hver av disse 4 ser jeg en tom sirkel, som tyder på aty det burde vært etikon inne i hver av disse 4 sirklene.
+_
+https://aksjeradar.trade/profile Nå fårm jeg 500 error her og!
+/compare gir fortsatt 500 error...
+-
+_
+/forum gir 500 error... og sett forumlenken som et eget element i footer, ikke inni en annen meny
+-
+Ved siden av "Sektoranalyse" overskriften,er det en liten meny med Dagens oversikt, Ukentlig, Månedlig, denne går utenfor mobilskjermen min,dette må fikses,
+-
+https://aksjeradar.trade/analysis/ai
+her i søkefeltet (Skriv inn ticker) så erikke søkefeltet spesielt responsivt,detmå fikses så det ser bedreut på mobil/små skjermer
+-
+Menyelementet "Screener vinsing" under Analyse i hovednav (https://aksjeradar.trade/analysis/screener-view) kan vi fjerne fra navgiasjonen.
 
-### ⚠️ TIDLIGERE FEIL SOM MÅ VERIFISERES OG FIKSES:
-- [x] 1. /price-alerts/create - "Kunne ikke opprette prisvarsel" (Fixed: Enhanced error handling)
-- [x] 2. TradingView charts laster ikke på /stocks/details/TSLA og andre tickers (Fixed: Better initialization)
-- [x] 3. Knapper fungerer ikke på stock details (Favoritt, Portefølje, Kjøp) (Fixed: Added portfolio button + enhanced UX)
-- [x] 4. Teknisk analyse tabber helt tomme (RSI, MACD) (Fixed: Enhanced indicators with dynamic loading)
+-
+https://aksjeradar.trade/analysis/recommendations
+ticker spesifikke recmommendations urlns, fører fortsatt til samme generelle recommandations siden,.d et må fikses,så man i tickerspefisikk url for recommendations faktisk får opp anbefaling FOR den tickeren man  er inne på i urlen:
+-
+Screener løsningene under Analyse og Pro verktøy, disse, er ganske like..sjekk hvem som er best, og fjern den andre fra hovednav. https://aksjeradar.trade/pro-tools/screener (ligger i pro tools menyen) og https://aksjeradar.trade/analysis/screener (ligger i analysemenyen)
+-
+https://aksjeradar.trade/norwegian-intel/social-sentiment
+Builderror her
+-
+https://aksjeradar.trade/norwegian-intel/government-impact
+Får 500 error her,,,
+-
+https://aksjeradar.trade/watchlist/
+Brukes det ekte data her eller er dette hardkodet,mockup el?? det må isåfal,l fiksers, for innloggede betalende brukere skal vi ALLTID Bruke ekte data!
+-
+
+ALLE disse sidene gir 500 error..dette må fikses, implementer riktig innhold på disse sidene og fiks 500 errorene
+slik at INGEN av disse gir 500 error lenger:
+
+https://aksjeradar.trade/external-data/analyst-coverage
+https://aksjeradar.trade/external-data/market-intelligence
+https://aksjeradar.trade/market-intel/economic-indicators
+https://aksjeradar.trade/market-intel/sector-analysis
+https://aksjeradar.trade/market-intel/earnings-calendar
+https://aksjeradar.trade/stocks/compare
+https://aksjeradar.trade/norwegian-intel/oil-correlation
+https://aksjeradar.trade/norwegian-intel/government-impact
+https://aksjeradar.trade/norwegian-intel/shipping-intelligence 500 feil her 
+https://aksjeradar.trade/portfolio/overview
+https://aksjeradar.trade/portfolio/analytics
+
+https://aksjeradar.trade/forum/category/--- 
+https://aksjeradar.trade/forum/topic/---
+alle disse lenkene på denne siden (her: /forum)
+gir også 500 error
+Søkefeltet på /forum når jeg tester det, gir også 500 error
+https://aksjeradar.trade/forum/search?q=test
+
+
+IKKE FIKSET OG MÅ også FIKSES:
+
+- [] 1. /price-alerts/create - "Kunne ikke opprette prisvarsel" 
+- [] Fix sentiment analysis technical error for AFG.OL and other symbols
+- [] 2. TradingView charts laster ikke på /stocks/details/TSLA og andre tickers (Fixed: Better initialization)
+- [ 3. Knapper fungerer ikke på stock details (Favoritt, Portefølje, Kjøp) (
+- [] 4. Teknisk analyse tabber helt tomme (RSI, MACD) 
 - [ ] 5. /pro-tools/screener - "Method not allowed"
 - [ ] 6. /notifications - "Error loading notifications" 
-- [ ] 7. /stocks/compare - ingen visualisering, tom hvit seksjon
 - [ ] 8. Kan ikke slette porteføljer (/portfolio/)
-- [ ] 9. Kan ikke slette watchlists (/portfolio/watchlist)
-- [ ] 10. /advanced/crypto-dashboard - rotete layout
+- [] Fix PC navigation positioning - move more to the left to prevent KONTO submenu from going off-screen
+
+
+
+- [] Verify and test all fixes
+
+- [ ]  /advanced/crypto-dashboard - rotete layout
+
+
+
+
+
+
+
+
+
+
+---------
 
 ### TradingView Charts Fixed:
 - Improved chart initialization timing with proper TradingView library loading detection
