--- a/TODO2108.md
+++ b/TODO2108.md
@@ -1,4 +1,63 @@
+Når jeg lastet ned PWA appen på mobil og startet den for første gang,så så jeg en diger sort runding , noen få sekunder før selve appen vart lastet inn, det var vledig rarrt xD Regner med at det ser astyling issues der ogxD Og at det egentlign skulle vært et hvitt aksjesgtmbol/logo i denne helt sorte rundingen i app startupen??
+
+
+## ✅ CARD HEADERS & BANNER FIXES COMPLETED:
+
+### Card Headers FixCard headers er jo det jeg har snakket mest om hele tiden ang dertte! Ønsker da for det meste mørke bakgrunner/medium-mørk, og HVITE tekster over. ✅ FIKSET
+
+Ser også at dette ikke er fikset:? Banneret på forside som innlogget bruker, Premium markedsoversikt, some er blått og grønt: Finn bedre farger her.... feks sort og hvit, eller rød og hvit.. og de må fikses i bannerne på /prices..lys grønn må være mørk grønn osv.. ✅ FIKSET
+- [x] **All card headers**: Dark gray background (#343a40) with white text
+- [x] **Portfolio tips headings**: "Aksjetips", "Siste 20 aksjetips", "Hva er aksjetips?" now proper contrast
+- [x] **Consistent styling**: All h1-h6 in card headers have white text on dark backgrounds
+
+### Banner Color Fixes:
+- [x] **Premium Markedsoversikt banner** (homepage): Changed from bg-success to bg-dark (black/white)
+- [x] **Pricing page banners**: Changed bg-info to bg-dark for better contrast
+- [x] **Badge styling**: Warning badges now use dark colors instead of bright yellow
+- [x] **Light green → Dark green**: All bg-success now uses #1e4620 (dark green)
+
+### CSS Changes Applied:
+```css
+/* Card headers - dark backgrounds with white text */
+.card-header, .card-header h1, .card-header h2, .card-header h3, .card-header h4, .card-header h5, .card-header h6 {
+    background-color: #343a40 !important; /* Dark gray */
+    color: white !important;
+}
+
+/* Fix bright colors to darker versions */
+.bg-success {
+    background-color: #1e4620 !important; /* Dark green */
+    color: white !important;
+}
+```
+
+---
+
+## ✅ PORTFOLIO TIPS PAGE CONTRAST FIXES COMPLETED:
+
+**Test URL**: https://aksjeradar.trade/portfolio/tips
+
+### Fixed Issues:
+- [x] **"Aksjetips" main heading**: Removed `text-dark` class → Now uses default styling
+- [x] **"Siste 20 aksjetips" heading**: Card headers now have blue background with white text
+- [x] **"Hva er aksjetips?" heading**: Card headers consistently styled with white text
+- [x] **All card headers**: Blue background (#007bff) with white text for readability
+- [x] **Background colors**: Proper contrast maintained throughout
+
+### CSS Changes Applied:
+```css
+/* Card headers get blue background with white text */
+.card-header, .card-header h1, .card-header h2, .card-header h3, .card-header h4, .card-header h5, .card-header h6 {
+    background-color: #007bff !important;
+    color: white !important;
+}
+```
+
+---
+
 # KRITISKE FEIL - FULLSTENDIG LISTE 
+
+
 Når det gjelder styling endringer...Kan du scratche alle stylingendringer gjort det siste døgnet? Også dereter prøver vi igjen å fikse det lille jeg ville fikse vedr.s tyling,og det var egnetling stort sett bare å endre noen overskrifter/tekster fra sort til hvit, og omvendt... De som var på farget bakgrunn og  var sorte av tekst,ville jegn ha lyse, og noen fåpn steder var det hvit tekst på lysblå bakgrunn,
 Det er f.eks sort tekst o underoverskriftene på min profil, det står Profil, og Varsler i sort tekstfarge,på mørkblå bakgrunn. Da må tekstfargen IKKE være sort men hvit.. Nesten ALLE steder er det småoverskrifrer i SORT, påfarget bakgrunn (mye mørkblå bakgrunn) ,og det skulle det vært HVIT tekstfarge...=(
   Dert er ogå en del knapper som har vært sorte,og plutselig nå er brune...
@@ -9,7 +68,12 @@ Det er f.eks sort tekst o underoverskriftene på min profil, det står Profil, o
 Alt som er lilla,endre farge på det xD
 Lysegult må endres til mørkegult,alle steder det er bakgrunnsfarge,og samme gjelder lysegrønt, eller lyserødt, må endres til mørkrødt, mørkgrønt, altså der dette er bakgrunnsfarge.
 -
-Banneret på forside som innlogget bruker, Premium markedsoversikt, some r blått og grønt: Finnbedre farger her.... feks sort og hvit, eller rød og hvit.. F.eks såder dette fortsatt feil på /prices..Her har det skjedd mye rart med fargene siste 24 t.
+
+
+Card headers er jo det jeg har snakket mest om hele tiden ang dertte! Ønsker da for det meste mørke bakgrunner/medium-mørk, og HVITE tekster over.
+
+Ser også at dette ikke er fikset:? Banneret på forside som innlogget bruker, Premium markedsoversikt, some er blått og grønt: Finn bedre farger her.... feks sort og hvit, eller rød og hvit.. og de må fikses i bannerne på /prices..lys grønn må være mørk grønn osv..
+
 -
 På profilen min når jeg slår på varsler for f.eks e-post,og det ser ut som det er går i orden, fvarselinnstilling oppdatert får jeg, MEN Det oppdateres ikke,altså togglen endres ikker, tror ikke jeg noensinne kommer til å få epost fvarsel heller, dette må fgikses på ordentlig.
 -
