--- a/TODO-2408.md
+++ b/TODO-2408.md
@@ -1,12 +1,36 @@
 
-## **🔴 KRITISKE 500-FEIL (HØYESTE PRIORITET)**
+## **🔴 KRITISKE PROBLEMER SOM FORTSATT IKKE ER FIKSET (HØYESTE PRIORITET)**
+
+### **SIDER SOM FORTSATT VISER BARE TEKST/IKKE FUNGERER**
+- [ ] https://aksjeradar.trade/stocks/compare - viser fortsatt bare tekst, ikke riktig side/template/funksjonalitet
+
+### **CSS-PROBLEMER SOM MÅ FJERNES**  
+- [ ] .card-header h5, .card-header h6, .card-header .btn, .card-header a { color: #212529 !important; } MÅ fjernes som regel
+- [ ] .card-header.bg-primary h5, .card-header.bg-primary h6 { background-color: transparent !important; } denne regelen må fjernes
+
+### **JAVASCRIPT-FEIL PÅ SCREENER**
+- [ ] https://aksjeradar.trade/analysis/screener - addToWatchlist og saveAsWatchlist fortsatt ikke definert
+- [ ] Hverken hjerteknapp eller lagre som watchlist knapp fungerer på screener
+
+### **DATA-VISNINGSPROBLEMER**
+- [ ] https://aksjeradar.trade/analysis/currency-overview - Volum: 0 og Signal viser bare oransje streker
+- [ ] Får fortsatt både success og feilmelding når jeg forsøker å legge til favoritt på /stocks/list/crypto og /stocks/list/currency
+
+### **500-FEIL SOM FORTSATT EKSISTERER**
 - [ ] Fix /watchlist/ - 500 error  
 - [ ] Fix /profile - 500 error
-- [ ] Fix /analysis/sentiment?symbol=DNB.OL - 500 error
-/analysis/sentiment?symbol=DNB.OL:1  GET https://aksjeradar.trade/analysis/sentiment?symbol=DNB.OL 500 (Internal Server Error)Understand this error
-sentiment?symbol=DNB.OL:994  POST 
-(anonymous) @ sentiment?symbol=DNB.OL:1053Understand this error
-sentiment?symbol=DNB.OL:1014 Achievement tracking error: SyntaxError: Unexpected token '<', "<!DOCTYPE "... is not valid JSON
+- [ ] Fix /analysis/sentiment?symbol=TEL.OL - 500 error
+- [ ] Fix /analysis/warren-buffett - 500 error
+- [ ] https://aksjeradar.trade/advanced-analysis - 500 error
+- [ ] https://aksjeradar.trade/pro-tools/alerts - "Method Not Allowed" error
+- [ ] https://aksjeradar.trade/portfolio/portfolio/9/add - 500 error
+
+### **CONVEY TRANSLATE PROBLEM**
+- [ ] Convey translate løsningen er fortsatt ikke i orden..den fungerte igår
+
+### **ACHIEVEMENT TRACKING FEIL**
+- [ ] POST https://aksjeradar.trade/achievements/api/update_stat 500 (Internal Server Error)
+- [ ] Achievement tracking error: SyntaxError: Unexpected token '<', "<!DOCTYPE "... is not valid JSON
 - [ ] Fix /analysis/warren-buffett?ticker=TESLA - 500 error (dict object has no attribute 'metrisk/buffett_score')
 - [ ]  https://aksjeradar.trade/pro-tools/alerts får fortsatt denne meldingen orsøker  lage varsel her: https://aksjeradar.trade/pro-tools/alerts
 "Method Not Allowed
