--- a/TODO-2408.md
+++ b/TODO-2408.md
@@ -58,6 +58,25 @@ https://aksjeradar.trade/stocks/prices
 - [ ] Her, kan du fjerne kolonnen for bid,ask,volume i valuta-tabben
 og fjerne kolonnen for markedsverdi in Kryptovaluta-kolonnen? 
 Med mindre du klarer fikse de til å hente inn og vise (ekte data) da.
+- [ ] Fortsatt MASSE problemer på details sidene for tickers! https://aksjeradar.trade/stocks/details/TEL.OL
+Ser fortsatt ut som det brukes mock,fake priceøverst på dise sidene, står 100 på alle sammen...? Det MÅ brukes kun ekte data her
+-- Om Selskapet
+Ingen selskapsbeskrivelse tilgjengelig.
+Generelt
+Sektor	Ikke tilgjengelig
+Bransje	Ikke tilgjengelig
+Land	Ikke tilgjengelig
+Ansatte	Ikke tilgjengelig
+Kontakt
+Adresse	Ikke tilgjengelig
+By	Ikke tilgjengelig
+Telefon	Ikke tilgjengelig
+Nettside	Ikke tilgjengelig
+Dette må fikses!
+-- RSI Indikator, og MACD iindikator på denne siden, under teknisk analyse viser også fortsatt ingenting!
+-- Og øverst under teknisk analyse tabben, står det: Singjmal: ERROR; N/A Error loading data, dette MÅ fikses!
+-- Se fullstendig anbefaling - knappen på disse details tickersidene, skal også endres! til å gå til rutene /analysis/ai---tickernavn
+-- Kursutvikling: Under her, står det fortsatt bare å loader og loader, ingen diagrammer /visualisering som vises! 
 
 ## **🟡 EKTE DATA FOR INNLOGGEDE BRUKERE** 
 - [ ] Ensure /market-intel/ shows REAL data for logged-in users
