--- a/TODO2708.MD
+++ b/TODO2708.MD
@@ -65,4 +65,7 @@ https://aksjeradar.trade/portfolio/create
 
 Oversettelsesfunksjonen fungerer ikke som den skal.. Når jeg trykker på "English" knappen øverst, så skejr det ingenting, siden bare "hopper"; når alt på norsk da egentlig skal bli oversatt til engelsk
 
+-
 
+https://aksjeradar.trade/analysis
+Men nå er det noe rart med analsyemenyen, for 4 av menyelewmentene i den ligger dobbelt opp, og i mye større knapp? dette må fjernes, altså Markedsoversikt, screener, prediksjoner, anbefalinger,de store knappeene av disse, det skal bare være den "lave" analysemenyen" som har vært der nesten hele tiden, søkefelt er også dobberlt opp (og veeeeldig langt) og kan også fjernes
