--- a/TODO2708.MD
+++ b/TODO2708.MD
@@ -1,9 +1,77 @@
-Sektoranalyse
-Siden er midlertidig utilgjengelig. Feil: Unexpected end of template. Jinja was looking for the following tags: 'endblock'. The innermost block that needs to be closed is 'block'. Nå ser jeg denne teksten her..
-https://aksjeradar.trade/market-intel/sector-analysis
 
+
+https://aksjeradar.trade/market-intel/sector-analysis
+Beklager, en feil oppsto
+Vi jobber med å løse problemet. Prøv igjen senere.
 
 https://aksjeradar.trade/profile
 Vises fortsatt ikke som den skal....redirecter og får feilmelding enda
+-
+Søkefeltet her fungerer fortsatt ikke
+https://aksjeradar.trade/analysis/warren-buffett?ticker=TESLA
+-
+500 teknisk feil, 
+Får dette når jeg forsøker å opprette nytt innelgg på forumet  https://aksjeradar.trade/forum/create_topic
+
+-
+https://aksjeradar.trade/stocks/compare?tickers=EQNR.OL&tickers=DNB.OL&tickers=&tickers=&period=6mo&interval=1d&normalize=1
+Vsises fortsatt ingenting i vinduet her nunder overskriften
+Sammenligning av EQNR.OL, DNB.OL
+-
+
+https://aksjeradar.trade/analysis/short-analysis
+Her mangler analysemenyen øverst på siden
+-
+https://aksjeradar.trade/advanced-analytics/
+Knappene /funksjonene genererer prediksjon, bath prediksjoner og markedsanalyse knappene her fungerer ikke,skjer ingenting..
+-
+
+Fortsatt problem med stocks details sidene:https://aksjeradar.trade/stocks/details/GOOGL (eksempel)
+Diagrammene under Kursutvikling bare laster i evigheten
+Og på teknisk analsye tabben er det helt tomt under RSI indikator og MACD indikator
+Kan dette fikses ved å kopiere funksjonaltieten fra denne siden https://aksjeradar.trade/analysis/tradingview, for her fungerer det...
+-
+
+Kunne ikke opprette varsel: 'browser_enabled' is an invalid keyword argument for PriceAlert
+får jeg når jeg forsøker å opprette varsel her:https://aksjeradar.trade/pro-tools/alerts
 
 
+.
+https://aksjeradar.trade/settings
+Varselinnstillinger oppdatert!
+Får jeg her, men toggle skrur seg ikke "på"
+Testet med å slå på E-post varsler..
+
+-
+Kunne ikke opprette prisvarsel. Prøv igjen.
+får jeg når jeg forsøker å opprette prisvarsel her:
+https://aksjeradar.trade/price-alerts/create
+-
+https://aksjeradar.trade/portfolio/9/add
+Her står det crf token jFkNjJjMGQyODFlZWQ2MDUwN2E3ZDVlYTc5YTU2ZDg3MDRmZjE1MzYi.aK5BGA.n9ZQDbLH_b8jbc_hwICncQiA09M
+Ticker-symbol og når jeg trykker på "Legg til aksje" knappen får jeg: "Sikkerhetsfeil: Vennligst prøv igjen." og sendes til forsiden.
+
+-
+Porteføljen "test3" ble opprettet!
+Kunne ikke opprette portefølje i databasen. Prøv igjen.
+Får begge disse meldingene samtidig når jeg
+oppretter en ny portefølje
+https://aksjeradar.trade/portfolio/create
+
+-
+
+
+! Sjekk at alle sider representert i navigasjonen (innlogget bruker) henter og viser utelukkende EKTE data
+
+Oversettelsesfunksjonen fungerer ikke som den skal.. Når jeg trykker på "English" knappen øverst, så skejr det ingenting, siden bare "hopper"; når alt på norsk da egentlig skal bli oversatt til engelsk
+
+-
+
+
+Når jeg gjør et google søk,
+så kommer noen ganger Railway urlen
+opp i stedet for aksjeradar.trade, hvoprdan kan vi fikse/unngå dette?
+Eksempel fra google søk:
+Railway
+http://web-production-1e7d.up.railway.app › terms
+Norges beste aksjeanalyseplattform. AI-drevne analyser, sanntidsdata og teknisk analyse for Oslo Børs og globale markeder. Investeringsverktøy for både ...
