--- a/TODO2708.MD
+++ b/TODO2708.MD
@@ -1,4 +1,17 @@
 
+- [ ] 1. Diagnose and fix sector analysis page error (`/market-intel/sector-analysis`)
+- [ ] 2. Fix search field on Warren Buffett analysis page (`/analysis/warren-buffett`)
+- [ ] 3. Fix 500 error on forum topic creation (`/forum/create_topic`)
+- [ ] 4. Fix stocks compare page so comparison data displays (`/stocks/compare`)
+- [ ] 5. Restore analysis menu on short analysis page (`/analysis/short-analysis`)
+- [ ] 6. Fix advanced analytics buttons/prediction features (`/advanced-analytics`)
+- [ ] 7. Fix stock details charts, RSI, MACD loading (`/stocks/details/GOOGL`)
+- [ ] 8. Fix price alert creation error (`browser_enabled` argument) (`/pro-tools/alerts`)
+- [ ] 9. Fix alert toggle on settings page (`/settings`)
+- [ ] 10. Fix price alert creation error (`/price-alerts/create`)
+- [ ] 11. Fix CSRF error when adding stock to portfolio (`/portfolio/9/add`)
+- [ ] 12. Fix conflicting messages on portfolio creation (`/portfolio/create`)
+
 
 https://aksjeradar.trade/market-intel/sector-analysis
 Beklager, en feil oppsto
