--- a/TODO2708.MD
+++ b/TODO2708.MD
@@ -12,6 +12,10 @@
 - [ ] 11. Fix CSRF error when adding stock to portfolio (`/portfolio/9/add`)
 - [ ] 12. Fix conflicting messages on portfolio creation (`/portfolio/create`)
 
+-
+https://aksjeradar.trade/external-data/market-intelligence
+https://aksjeradar.trade/external-data/analyst-coverage
+Feilmelding på disse 2 sidene nå også! De har fungert..
 
 https://aksjeradar.trade/market-intel/sector-analysis
 Beklager, en feil oppsto
