--- a/TODO2708.MD
+++ b/TODO2708.MD
@@ -12,6 +12,8 @@
 - [ ] 11. Fix CSRF error when adding stock to portfolio (`/portfolio/9/add`)
 - [ ] 12. Fix conflicting messages on portfolio creation (`/portfolio/create`)
 
+https://aksjeradar.trade/stocks/list/currency
+Kolonnen her som viser volum 0  i alle rader kan fjernes
 -
 https://aksjeradar.trade/external-data/market-intelligence
 https://aksjeradar.trade/external-data/analyst-coverage
@@ -55,10 +57,16 @@ får jeg når jeg forsøker å opprette varsel her:https://aksjeradar.trade/pro-
 
 .
 https://aksjeradar.trade/settings
+500 error nå!
+Tidligere:
 Varselinnstillinger oppdatert!
 Får jeg her, men toggle skrur seg ikke "på"
 Testet med å slå på E-post varsler..
 
+-
+https://aksjeradar.trade/my-subscription
+Kunne ikke laste abonnementsinformasjon
+Denne siden må fikses
 -
 Kunne ikke opprette prisvarsel. Prøv igjen.
 får jeg når jeg forsøker å opprette prisvarsel her:
