--- a/app/templates/TODO-2008.MD
+++ b/app/templates/TODO-2008.MD
@@ -17,6 +17,7 @@
 - [ ] **Crypto-dashboard 500 error** - Returnerer HTML, ikke faktisk 500
 - [ ] **Pro-tools/alerts Method not allowed** - Returnerer HTML, ikke method error
 - [ ] **Verifisere ekte data på alle sider** - Trengs systematisk gjennomgang
+Fikse pWA
 
 RSI Indikator
 og MACD indikator viser ingenting , det må også fikses
