--- a/TODO2708.MD
+++ b/TODO2708.MD
@@ -1,3 +1,6 @@
+Alt gjelder innlogget bruker
+PS: slette cache grundig når alt er fikset
+
 
 - [ ] 1. Diagnose and fix sector analysis page error (`/market-intel/sector-analysis`)
 - [ ] 2. Fix search field on Warren Buffett analysis page (`/analysis/warren-buffett`)
