--- a/app/TODO2708.MD
+++ b/app/TODO2708.MD
@@ -1,3 +1,5 @@
+e del sider som er wide i bredden, og det skal de ikke være, konsistens i sidebredde på all pages, alle skal være slik de aller fleste er i bredde (pc)
+
 - [x] Check /forum/create_topic for errors and fix (✅ Returns 302 redirect - correct behavior for unauthenticated users)
 - Sjekk/fiks stocks/compare siden, og funksjonaltieten
 - [] Fix analysis menu missing on /analysis/short-analysis page (ikke i orden enda,jeg mener den ekstra menyen som er i main content delen,øverst på siden)
