Clean cache and temp files

--- a/app/TODO2708.MD
+++ b/app/TODO2708.MD
@@ -1,4 +1,4 @@
-e del sider som er wide i bredden, og det skal de ikke være, konsistens i sidebredde på all pages, alle skal være slik de aller fleste er i bredde (pc)
+Det er ene del sider som er wide i bredden, og det skal de ikke være, konsistens i sidebredde på all pages, alle skal være slik de aller fleste er i bredde (pc)
 
 - [x] Check /forum/create_topic for errors and fix (✅ Returns 302 redirect - correct behavior for unauthenticated users)
 - Sjekk/fiks stocks/compare siden, og funksjonaltieten
