--- a/TODO2808.MD
+++ b/TODO2808.MD
@@ -1,7 +1,63 @@
-" 💰 Finn ut hvor mye du kan tjene!
-Bruk vår ROI-kalkulator og se hvor lønnsomt det kan være å investere smart med Aksjeradar.trade "
-Dette banneret på /index som IKKE innlogget bruker, har mistet all farge?:p
-hvit tekst på hvit bakgrunn osv... 
+IKKE FIKSET (selv om det skulle ha vært fikset..?) 
+Må fikses, innlogget bruker:
+
+## 1. AKUTT DEPLOYMENT FIX
+- [ ] 1.1: Fiks Railway deployment error - python3: can't open file '/app/start_fixed.py': [Errno 2] No such file or directory
+
+## 2. KRITISKE SIDER SOM ER NEDE (500 errors)
+- [ ] 2.1: Fiks /stocks/compare - 500 error "Kunne ikke laste aksjsammenligning"
+- [ ] 2.2: Fiks /my-subscription - "Kunne ikke laste abonnementsinformasjon"
+- [ ] 2.3: Fiks /forum/create_topic - "En teknisk feil oppsto. Prøv igjen senere"
+- [ ] 2.4: Fiks /analysis/warren-buffett søkefelt - "En feil oppstod under analysen"
+
+## 3. FUNKSJONER SOM IKKE VIRKER
+- [ ] 3.1: Fiks /advanced-analytics buttons (ingen respons)
+- [ ] 3.2: Fiks /external-data/analyst-coverage buttons (Alle, Buy, Hold, Sell)
+- [ ] 3.3: Fiks /external-data/analyst-coverage "No analyst coverage data available"
+- [ ] 3.4: Fiks /profile favoritter viser "Du har ingen favoritter ennå" (feil)
+
+## 4. STOCK DETAILS SIDER PROBLEMER
+- [ ] 4.1: Fiks stock details charts loading (står bare og loader)
+- [ ] 4.2: Fiks design issues - "Nøkkeltall" på hver tabb + white space
+- [ ] 4.3: Fjern tomme RSI og MACD seksjonene på "teknisk" tabb
+
+## 5. PORTFOLIO & ALERTS PROBLEMER
+- [ ] 5.1: Fiks /price-alerts/create error "Kunne ikke opprette prisvarsel"
+- [ ] 5.2: Fiks /price-alerts/ "innstillinger" knapp
+- [ ] 5.3: Fiks /portfolio/9/add "Det oppstod en feil ved lasting av porteføljer"
+- [ ] 5.4: Fiks /portfolio/create motstridende success/fail meldinger
+
+## 6. FORUM MOCKUP CLEANUP
+- [ ] 6.1: Fjern/endre mockup kategorier i /forum/create_topic
+- [ ] 6.2: Fjern ikke-fungerende lenker eller legg til innhold
+
+## 7. DATA KVALITET FOR INNLOGGET BRUKERE
+- [ ] 7.1: Sjekk at alle navigasjonssider henter ekte data (innlogget bruker)
+- [ ] 7.2: Sjekk /profile notifikasjoner funksjonalitet er fullstendig
+
+## 8. STYLING ISSUES
+- [ ] 8.1: Fiks /market-intel/sector-analysis hvis for simpel
+
+
+
+FORTSATT FEIL VED DISSE SIDENE:
+Kunne ikke laste aksjsammenligning og 500 error her nå:https://aksjeradar.trade/stocks/compare
+
+Og denne siden fungerer heller ikke enda
+https://aksjeradar.trade/my-subscription "Kunne ikke laste abonnementsinformasjon"
+
+https://aksjeradar.trade/market-intel/sector-analysis
+Denne siden fungerer nå, men var veeeldig simpel?
+-
+
+https://aksjeradar.trade/forum/create_topic
+får "En teknisk feil oppsto. Prøv igjen senere." når jeg prøver "nytt topic" knappen for å lage et nytt innlegg..
+!MOCKUP må også fjernes herfra, som kategoriene, eller de kan jo være der,
+men når det ikke er noe innhold/innlegg der, så må lenkene enders/fjernes?
+
+Fiks søkefelt på Warren Buffett analysis page (`/analysis/warren-buffett`) Når jeg søker etter noe her, får jeg feilmeldingen: "En feil oppstod under analysen. Prøv igjen senere."
+
+Fiks advanced analytisk buttons/prediksjon funksjoner (`/advanced-analytics` skjer ingenting når jeg tester knapper/funksjoner her..
 
 https://aksjeradar.trade/external-data/analyst-coverage
 Her fungerer ikke knappene: Alle, Buy, Hold, Sell
@@ -10,33 +66,10 @@ Her fungerer ikke knappene: Alle, Buy, Hold, Sell
 
 "Mine favoritter
 Du har ingen favoritter ennå. Trykk på stjerneknappen ved en aksje for å legge til favoritt."
-Dette står det på /profile, på meg, og det er jo ikke korrekkt
+Dette står det på /profile, på meg, og det er jo ikke korrekt
 for jeg har egentlig mange favoritter lagret, (det ser jeg også når jeg f.eks går hit: https://aksjeradar.trade/stocks/list/oslo )
 
-"Kontoinstillinger"-elementet under Konto submenyen, kan fjernes
-
-https://aksjeradar.trade/profile
-sjekke at varsel og notifikasjoner funksjonaliteten er helt gjennmført
-satt opp og fungerer her
-
-
-- [ ] . Fiks price alert creation error (`/price-alerts/create`)
-"Kunne ikke opprette prisvarsel. Prøv igjen." dette må fikses, til å fungere på ekte,og uten errors.
-og det er denne lenken som skal være i Konto submenyen for "Varsler"
-altså /price-alerts
-
-
-Disse sidene må fikses (innlogget bruker)  gir 500 eller andre errors for  
-https://aksjeradar.trade/forum/create_topic
-/sector-analysis
-/my-subscription
-/stocks/compare (nå er det kun en enkel test-template her, vi må innføre ordentlig funksjonalitet, sammenlikning av aksjer (ekte data)
-
-
-- [ ] . Fiks søkefelt på Warren Buffett analysis page (`/analysis/warren-buffett`)
-- [ ] . Gjenopprett analysemeny på short analysis page (`/analysis/short-analysis`)
-- [ ] . Fiks advanced analytics buttons/prediksjon funksjoner (`/advanced-analytics`)
-
+----
 PROBLEMER PÅ STOCKS/DETAILS/TICKERS SIDENE 
 Fiks stock details charts loading, de står bare å loader (tabben "oversikt" (/stocks/details/GOOGL` eksempelside)
 STYLINGPROBLEMER: Nå er det også noe rart med designet på disse details
@@ -44,13 +77,23 @@ tickers sidene, "Nøkkeltall" er plutselig på hver tabb, og det er masse white 
 De store seksjonene (som er tomme(/hvite) for RSI og MACD indikator på
 tabben "teknisk" kan fjernes
 
+Fiks price alert creation error (`/price-alerts/create`)
+"Kunne ikke opprette prisvarsel. Prøv igjen." dette må fikses, til å fungere på ekte,og uten errors.
+https://aksjeradar.trade/price-alerts/ og knappen "innstillinger" fungerer ikke her
 
-- [ ] . Fiks CSRF error ved add stock to portfolio (`/portfolio/9/add`)
-- [ ] . Fiks motstridende meldinger ved portfolio creation (`/portfolio/create`)
+Fiks problem ved add stock to portfolio (`/portfolio/9/add`)
+Når jeg forsøker å "Legg til aksje" i en av mine porteføljer, får jeg bare feilmeldingen: "Det oppstod en feil ved lasting av porteføljer."
 
-- [ ] . Sjekk at alle navigasjonssider henter og viser ekte data (innlogget bruker)
+Fiks motstridende meldinger ved portfolio creation (`/portfolio/create`)
+Får både success og fail-melding, men porteføljen jeg lager blir opprettet,
+så feilmeldingen er feil og må fjernes
 
-- [ ] . Fiks oversettelsesfunksjonen (English/Norsk toggle)
-- [ ] . Fiks Google search Railway-url problem (SEO/redirects)
 
+
+Sjekk at alle navigasjonssider henter og viser ekte data (innlogget bruker)
+
+
+https://aksjeradar.trade/profile
+sjekke at varsel og notifikasjoner funksjonaliteten er helt gjennmført
+satt opp og fungerer her, og at det ikke bare "ser sånn ut"
 
