--- a/TODO2808.MD
+++ b/TODO2808.MD
@@ -1,14 +1,11 @@
 IKKE FIKSET (selv om det skulle ha vært fikset..?) 
 Må fikses, innlogget bruker:
 
--
-IjJjYmZiOWI3YTJkYjIzNzM0YTE5ZmY1YTk3NTY0ODBjNDRmNDRiNjEi.aLWZ6g.42ADcWoL9ZDaDz-hCyJ-rFZ_1yo
-Dette står øverst her: https://aksjeradar.trade/price-alerts/settings
-
+/profile fungerer ikke nå..redirectes feil
+og får feilmeld: Det oppstod en teknisk feil under lasting av profilen. Prøv igjen senere.
 ----
 https://aksjeradar.trade/stocks/compare
 Over "Nøkkeltall" her, er det fortsatt et stort tomt hvitt vindu, der det egentlig skal være visualisering e.l? Enten fiks det, eller fjern dette vinduet
-
 
 
 PROBLEMER PÅ STOCKS/DETAILS/TICKERS SIDENE 
@@ -22,7 +19,7 @@ tabben "teknisk analyse" kan fjernes
 
 
 FORTSATT FEIL VED DISSE SIDENE:
-
+500 error
 Fiks søkefelt på Warren Buffett analysis page (`/analysis/warren-buffett`) Når jeg søker etter noe her, får jeg feilmeldingen: "En feil oppstod under analysen. Prøv igjen senere."
 
 "Mine favoritter
@@ -55,7 +52,6 @@ Når jeg forsøker å "Legg til aksje" i en av mine porteføljer, får jeg bare 
 Fiks motstridende meldinger ved portfolio creation (`/portfolio/create`)
 Får både success og fail-melding, men porteføljen jeg lager blir opprettet,
 så feilmeldingen er feil og må fjernes
-
 
 
 
