Fix TradingView chart loading and tab display issues, clear cache

--- a/TODO2808.MD
+++ b/TODO2808.MD
@@ -1,8 +1,8 @@
 IKKE FIKSET (selv om det skulle ha vært fikset..?) 
 Må fikses, innlogget bruker:
 
-/profile fungerer ikke nå..redirectes feil
-og får feilmeld: Det oppstod en teknisk feil under lasting av profilen. Prøv igjen senere.
+https://aksjeradar.trade/profile  "Det oppstod en teknisk feil under lasting av profilen. Prøv igjen senere."
+Denne siden fungerer heller ikke,gir feilmelding og videresender til https://aksjeradar.trade/stocks/list/index
 ----
 https://aksjeradar.trade/stocks/compare
 Over "Nøkkeltall" her, er det fortsatt et stort tomt hvitt vindu, der det egentlig skal være visualisering e.l? Enten fiks det, eller fjern dette vinduet
