--- a/TODO2808.MD
+++ b/TODO2808.MD
@@ -1,11 +1,53 @@
 IKKE FIKSET (selv om det skulle ha vært fikset..?) 
 Må fikses, innlogget bruker:
 
-https://aksjeradar.trade/profile  "Det oppstod en teknisk feil under lasting av profilen. Prøv igjen senere."
-Denne siden fungerer heller ikke,gir feilmelding og videresender til https://aksjeradar.trade/stocks/list/index
+-
+https://aksjeradar.trade/portfolio/view/16 (eksempel/test portefølje)
+Jeg forsøkte legge til aksjer gjennom knappen legg til aksjer i en av mine porteføjer jeg har testet med, men det skjer ingengting? Legger til aksjer, men ingen aksjer blir lagt til
+ELler dette er det jeg nmå ser:
+AksjeRadar
+Hjem
+Aksjer 
+Analyse 
+Market Intel 
+Pro Tools 
+Portfolio 
+Konto 
+tesyt
+yryey
+
+  
+Total verdi
+0 NOK
+Total avkastning
+-688 NOK
+-100.0%
+Antall posisjoner
+1
+Siste oppdatering
+11.09.2025
+Beholdninger
+Symbol	Navn	Antall	Gjennomsnittspris	Nåværende pris	Markedsverdi	Avkastning	Avkastning %	Handlinger
+
+Men det står altså ingentging under "Beholdninger" bare tomme overskrifter liksom
+
+Og grønne knapper må ha hvit tekst over, ikke sort som nå
+
+
+
+Hvis det er slik at det er vanskelig å finne "INnsidehandel"; ekte informasjon om dette,på mange tickersx (?,er det det? ) så bør kanskje tabben Innsidehandel heller fjernes? Eller får vi fikset så det blir hentet inn info , ekte innfo om innsidehandel på -de fleste- tickers?
 ----
-https://aksjeradar.trade/stocks/compare
-Over "Nøkkeltall" her, er det fortsatt et stort tomt hvitt vindu, der det egentlig skal være visualisering e.l? Enten fiks det, eller fjern dette vinduet
+https://aksjeradar.trade/stocks/details/EQNR.OL
+Under relaterte nyheter her, knappen: "se alle nyheter" lenker vel ikke helt tl riktig logisk sted..
+
+---
+
+https://aksjeradar.trade/watchlist/
+Her er det også mye galt, fikser du det som er galt? blant annet at varsler bare lastger...
+-
+Og denne siden /portfolio viser fortsatt 500 error
+-
+og denne siden, her skjer det ingenting når jeg søker etter tickers i warren buffet søkefeltet:https://aksjeradar.trade/analysis/warren_buffett?ticker=AAPL  (AAPL er et eksempel, skjer ingenting når jeg søker etter AAPL i søkefeltet på warren_buffet siden)
 
 
 PROBLEMER PÅ STOCKS/DETAILS/TICKERS SIDENE 
@@ -22,10 +64,6 @@ FORTSATT FEIL VED DISSE SIDENE:
 500 error
 Fiks søkefelt på Warren Buffett analysis page (`/analysis/warren-buffett`) Når jeg søker etter noe her, får jeg feilmeldingen: "En feil oppstod under analysen. Prøv igjen senere."
 
-"Mine favoritter
-Du har ingen favoritter ennå. Trykk på stjerneknappen ved en aksje for å legge til favoritt."
-Dette står det på /profile, på meg, og det er jo ikke korrekt
-for jeg har egentlig mange favoritter lagret, (det ser jeg også når jeg f.eks går hit: https://aksjeradar.trade/stocks/list/oslo )
 
 Fiks price alert creation error (`/price-alerts/create`)
 "❌ Kunne ikke opprette prisvarsel. Teknisk feil - kontakt support hvis problemet vedvarer.." 
